# Lucid

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py  build_and_test.bat  build_and_test.sh  comparison.md  example.py  pyproject.toml  requirements.txt  setup.py  test_tokenizer.py
Lucid/Tokenizer/: __init__.py  rust_tokenizer.py  tokenizer.py
benches/: tokenizer_benchmark.rs
examples/: basic_usage.rs
src/: error.rs  lib.rs  tokenizer.rs  tokenizer_test.rs
