[package]
name = "lucid-tokenizer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A BPE (Byte Pair Encoding) tokenizer implementation in Rust"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5" 