[package]
name = "lucid-tokenizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "lucid_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
thiserror = "1.0"

[build-dependencies]
pyo3-build-config = "0.20"
