[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Lucid"
version = "0.1.0"
description = "Library to simplify Training"
authors = [
    {name = "Kushal Gajjar", email = "kushalgajjar1@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/KushalGajjar1/Lucid"